  . stream_socket_enable_crypto() (Wez)
  . stream_wrapper_unregister() (Sara)
  . stream_wrapper_restore() (Sara)
  . stream_filter_remove() (Sara)
  . DomDocumentFragment::appendXML() (Christian)
  . SimpleXMLElement::registerXPathNamespace() (Christian)
  . mysqli::client_info property (Georg)
  . inet_pton() (Sara)
  . inet_ntop() (Sara)
  . fputcsv() (David Sklar)
- Added DomDocument::$recover property for parsing not well-formed
  XML Documents. (Christian)   
- Added Cursor support for MySQL 5.0.x in mysqli (Georg)
- Added proxy support to ftp wrapper via http. (Sara)
- Added MDTM support to ftp_url_stat. (Sara)
- Added zlib stream filter support. (Sara)
- Added bz2 stream filter support. (Sara)
- Added HTTP/1.1 and chunked encoding support to http:// wrapper. (Sara)
- Added support of parameter=>value arrays to
  xsl_xsltprocessor_set_parameter(). (Tony)
- Fixed extension initialization to respect dependancies between extensions.
  (Wez)
- Fixed a problem with SPL iterators aggregating the innner iterator. (Marcus)
- Fixed bug with raw_post_data not getting set. (Brian)
- Fixed bug in mysql::client_version(). (Georg)
- Fixed ZTS destruction. (Marcus)
- Fixed bug #29728 (Reflection API Feature: Default parameter value). (Marcus)
- Fixed bug #29522 (accessing properties without connection). (Georg)
- Fixed bug #29335 (fetch functions now use MYSQLI_BOTH as default). (Georg)
- Fixed bug #29311 (calling parent constructor in mysqli). (Georg)
- Fixed bug #29256 (SOAP HTTP Error when envelop size is more than 24345
  bytes).  (Dmitry, Wez)
- Fixed bug #29236 (memory error when wsdl-cache is enabled). (Dmitry)
- Fixed bug #29109 (SoapFault exception: [WSDL] Out of memory). (Dmitry)
- Fixed bug #29061 (soap extension segfaults). (Dmitry)
- Fixed bug #28985 (__getTypes() returning nothing on complex WSDL). (Dmitry)
- Fixed bug #28969 (Wrong data encoding of special characters). (Dmitry)

13 Jul 2004, PHP 5.0.0